# SegmentRegistration

./: CMakeLists.txt  LICENSE  README.md
Logo/: SegmentRegistration_Logo.xcf
ProstateMRIUSContourPropagation/: CMakeLists.txt  ProstateMRIUSContourPropagation.py
SegmentRegistration/: CMakeLists.txt  SegmentRegistration.py
